[package]
name = "sqd-portal-client"
version = "0.0.11"
edition = "2021"
description = "client for querying SQD portals"
homepage = "https://github.com/steelcake/sqd-portal-client"
repository = "https://github.com/steelcake/sqd-portal-client"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
cherry-evm-schema = { workspace = true }
cherry-svm-schema = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
rand = { workspace = true } 
tokio = { workspace = true, features = ["sync"] }
simd-json = "0.14"
bytes = "1" 
faster-hex = "0.10"
futures-lite = "2"
async-stream = "0.3"
bs58 = "0.5"

# workaround for https://github.com/apache/arrow-rs/issues/7196
# until fix is released to crates.io
chrono = "=0.4.39"

[dependencies.reqwest]
version = "=0.12.9"
# git = "https://github.com/seanmonstar/reqwest"
default-features = false
features = ["rustls-tls", "gzip"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"]}

