[package]
name = "sqd-portal-client"
version = "0.2.0"
edition = "2021"
description = "client for querying SQD portals"
homepage = "https://github.com/steelcake/sqd-portal-client"
repository = "https://github.com/steelcake/sqd-portal-client"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
simd-json = "0.17"
bytes = "1" 
faster-hex = "0.10"
futures-lite = "2"
async-stream = "0.3"
bs58 = "0.5"
alloy-primitives = "1"
arrow = "56"
anyhow = "1"
log = "0.4"
cherry-evm-schema = "0.2.0"
cherry-svm-schema = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
tokio = { version = "1", default-features = false, features = ["sync"] }
ruint = "1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "gzip"]

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
env_logger = "0.11"

